--- a/uwaves4TransmissionLinesCore.tex
+++ b/uwaves4TransmissionLinesCore.tex
@@ -75,7 +75,7 @@ We write the solutions to these equations as
 \begin{equation}\label{eqn:uwaves4TransmissionLines:200}
 \begin{aligned}
 V(z) &= V_0^{+} e^{-\gamma z} + V_0^{-} e^{+\gamma z} \\
-I(z) &= I_0^{+} e^{-\gamma z} - I_0^{-} e^{+\gamma z} \\
+I(z) &= I_0^{+} e^{-\gamma z} - I_0^{-} e^{+\gamma z}.
 \end{aligned}
 \end{equation}
 
