--- a/uwavesDeck1MaxwellsCore.tex
+++ b/uwavesDeck1MaxwellsCore.tex
@@ -5,7 +5,6 @@
 \section{Maxwell's equations in integral form}
 \paragraph{Faraday's law}
 \index{Faraday's law}
-
 For the integration surface sketched in \cref{fig:deck1Maxwells:deck1MaxwellsFig1} Faraday's law is
 
 \imageFigure{../figures/ece1236-microwaves/deck1MaxwellsFig1}{Stokes integration surface}{fig:deck1Maxwells:deck1MaxwellsFig1}{0.2}
@@ -24,11 +23,10 @@ On the RHS we have the sum of the conduction and displacement currents respectiv
 
 \paragraph{Units}
 \index{units}
-
 \begin{itemize}
 \item \( \BE \) \si{V/m} : Electric field
 \item \( \BH \) \si{A/m} : Magnetic field
-\item \( \BB \) \si{Weber/m^2} : Magnetic flux density
+\item \( \BB \) \si{Wb/m^2} : Magnetic flux density
 \item \( \BD \) \si{Cb/m^2} : Electric flux density (Coloumbs/meter-squared)
 \item \( \BJ \) \si{A/m^2} : Electric current density
 \item \( \rho \) \si{Cb/m^3} : Electric charge density
@@ -36,7 +34,6 @@ On the RHS we have the sum of the conduction and displacement currents respectiv
 
 \paragraph{Charge conservation law}
 \index{charge conservation}
-
 Consider a closed surface S with interior volume V, as sketched in \cref{fig:deck1Maxwells:deck1MaxwellsFig2}.  The charge conservation relation is
 
 \imageFigure{../figures/ece1236-microwaves/deck1MaxwellsFig2}{Divergence theorem integration volume}{fig:deck1Maxwells:deck1MaxwellsFig2}{0.2}
@@ -44,7 +41,6 @@ Consider a closed surface S with interior volume V, as sketched in \cref{fig:dec
 \begin{equation}\label{eqn:uwavesLecture1:60}
 \oiint \BJ \cdot \ncap dS = -\PD{t}{} \int \rho dV
 \end{equation}
-
 \paragraph{Maxwell's equations in integral form}
 \index{Maxwell's equations!integral form}
 
