--- a/usefulFormulas.tex
+++ b/usefulFormulas.tex
@@ -2,8 +2,7 @@
 % Copyright © 2015 Peeter Joot.  All Rights Reserved.
 % Licenced as described in the file LICENSE under the root directory of this GIT repository.
 %
-\paragraph{Terminology review}
-
+\paragraph{Terminology review.}
 \begin{equation}\label{eqn:uwavesDeck7MultisectionTransformersCore:20}
 Z_{\textrm{in}} = R + j X
 \end{equation}
@@ -21,9 +20,7 @@ Y_{\textrm{in}} = G + j B
 \end{itemize}
 
 Apparently this notation goes all the way back to Heavyside!
-
 \paragraph{Periodic motion}
-
 % T c = \lambda
 \begin{equation}\label{eqn:usefulFormulas:20}
 v_\phi = \frac{\omega}{\beta} = \frac{\lambda}{T}
@@ -32,7 +29,6 @@ v_\phi = \frac{\omega}{\beta} = \frac{\lambda}{T}
 \begin{equation}\label{eqn:usefulFormulas:40}
 \beta = \frac{2 \pi}{\lambda} = \frac{\omega}{v_\phi}
 \end{equation}
-
 \paragraph{Units}
 \index{units}
 
@@ -52,7 +48,7 @@ v_\phi = \frac{\omega}{\beta} = \frac{\lambda}{T}
 \si{H} = \si{V s/A} = \Omega \si{ s}
 \end{equation}
 \begin{equation}\label{eqn:usefulFormulas:480}
-\si{W} = \si{V s}
+\si{Wb} = \si{V s}
 \end{equation}
 \begin{equation}\label{eqn:usefulFormulas:80}
 [\epsilon] = \si{F/m}
