--- a/uwavesproblemSet1Problem2.tex
+++ b/uwavesproblemSet1Problem2.tex
@@ -8,25 +8,17 @@
 A transmission line is filled with a non-magnetic dielectric of \( \epsilon_r = 2.5\). The line has a capacitance per unit length of \( C = 200 \,\si{pF/m}\) and a resistance per unit length of \( R = 2 \Omega/\si{m} \).
 Calculate the corresponding phase velocity, characteristic impedance and attenuation constant \( \alpha \) (assume \(G = 0\)).
 } % makeproblem
-
 \makeanswer{uwaves:problemSet1:2}{
-
 %\makeSubAnswer{}{uwaves:problemSet1:2a}
-
 The impedance of the line is
-
 \begin{equation}\label{eqn:uwavesproblemSet1Problem2:20}
 Z_0 = \sqrt{\frac{ R + j \omega L }{ G + j \omega C }},
 \end{equation}
-
 we know \( R, C, G \), but not \( L \).  We'd found that
-
 \begin{equation}\label{eqn:uwavesproblemSet1Problem2:40}
 v_\phi = \inv{\sqrt{L C}},
 \end{equation}
-
 for lossless, low-loss, and distortionless lines.  If we assume that is the case here too, and
-
 \begin{equation}\label{eqn:uwavesproblemSet1Problem2:60}
 \begin{aligned}
 v_\phi
@@ -35,9 +27,7 @@ v_\phi
 \\ &= 1.9 \times 10^8 \,\si{m/s},
 \end{aligned}
 \end{equation}
-
 we have
-
 \begin{equation}\label{eqn:uwavesproblemSet1Problem2:80}
 \begin{aligned}
 L
@@ -48,7 +38,6 @@ L
 \end{equation}
 
 For frequencies in the \si{GHz} range are the low-loss conditions satisfied?  With \( G = 0 \), the condition \( G \ll \omega C \) is clearly true.  How about \( R \ll \omega L \)?  For \( f \) in \si{GHz} we have
-
 \begin{equation}\label{eqn:uwavesproblemSet1Problem2:300}
 \begin{aligned}
 \omega L
@@ -60,7 +49,6 @@ For frequencies in the \si{GHz} range are the low-loss conditions satisfied?  Wi
 We have \( 2 < 88 f \), so the low-loss approximation is definitely valid for frequencies above 1 \si{GHz}.
 
 Without such approximations, our impedance expression is a bit of an ugly beast
-
 \begin{equation}\label{eqn:uwavesproblemSet1Problem2:100}
 \begin{aligned}
 Z_0
@@ -70,13 +58,11 @@ Z_0
 \end{equation}
 
 The low-loss approximation for the impedence, with \( R = 0 \), is
-
 \begin{equation}\label{eqn:uwavesproblemSet1Problem2:160}
 Z_0 = 26.35.
 \end{equation}
 
 Compare this to the exact expansion of \cref{eqn:uwavesproblemSet1Problem2:100} at frequencies starting at 1 \,\si{GHz}
-
 \begin{equation}\label{eqn:uwavesproblemSet1Problem2:140}
 \begin{aligned}
 Z_0(1 \,\si{GHz}) &= 26.35 \phase{ \ang{-0.06566} } \\
@@ -97,9 +83,7 @@ For the attenuation factor first note that
 \\ &= f \sqrt{ 0.4 \pi } \lr{ (2/f) j - 2.8 \pi }^{1/2},
 \end{aligned}
 \end{equation}
-
 where \( f \) is in \si{GHz}.  We see that for \( f \in [1, 10] \), this \( \gamma \) is close to purely imaginary, as is also the case for \( R = 0 \).  Specifically
-
 \begin{equation}\label{eqn:uwavesproblemSet1Problem2:180}
 \begin{aligned}
 \gamma(1  \,\si{GHz})/f &= 33.12 \phase{ \ang{89.93} } \\
@@ -118,7 +102,6 @@ We want the real component of this.
 %
 %It appears that \( \alpha \sim 0 \) for this system in the \si{GHz} range.
 For the same frequencies, some specific values of the real part, are
-
 \begin{equation}\label{eqn:uwavesproblemSet1Problem2:220}
 \begin{aligned}
 \alpha(1  \,\si{GHz}) &= 0.037947307 \\
@@ -131,7 +114,6 @@ For the same frequencies, some specific values of the real part, are
 How much attenuation is this, relative to the wavelength in question?
 Even for lower frequencies, where the wavelength is larger, there is essentially zero attenuation over one wavelength.
 For the same respective frequencies we have
-
 \begin{equation}\label{eqn:uwavesproblemSet1Problem2:240}
 \begin{aligned}
 e^{-\lambda \alpha} &= 0.9928 \\
@@ -141,13 +123,10 @@ e^{-\lambda \alpha} &= 0.9993.
 \end{aligned}
 \end{equation}
 
-Let's see how the
-low-loss line approximation fares for both the real (\(\alpha\)) and imaginary (\(\beta\)) components of \( \gamma \)? For all of these frequencies, we have
-
+Let's see how the low-loss line approximation fares for both the real (\(\alpha\)) and imaginary (\(\beta\)) components of \( \gamma \)? For all of these frequencies, we have
 \begin{equation}\label{eqn:uwavesproblemSet1Problem2:260}
 \gamma = 0.377 + 0.5305 j \omega.
 \end{equation}
-
 which compares exactly with the low-loss approximations using \( Z_0 = \sqrt{L/C}, \alpha = (R/Z_0 + G Z_0)/2, \beta = \omega \sqrt{LC} \).
 
 The numerical calculations made for this problem can be found in \nbref{ps1:ps1_2.jl}.
